--- a/web_app/requirements.txt
+++ b/web_app/requirements.txt
@@ -1,7 +1,8 @@
 asgiref==3.2.3
 beautifulsoup4==4.8.2
+coverage==5.0.3
 Django==3.0.3
-django-bootstrap4==1.1.1
+Pillow==7.0.0
 pytz==2019.3
 soupsieve==2.0
 sqlparse==0.3.0
