--- a/web_app/requirements.txt
+++ b/web_app/requirements.txt
@@ -1,7 +1,13 @@
 asgiref==3.2.3
 beautifulsoup4==4.8.2
+Click==7.0
 coverage==5.0.3
 Django==3.0.3
+dlib==19.19.0
+face-recognition==1.3.0
+face-recognition-models==0.3.0
+numpy==1.18.1
+opencv-python==4.1.2.30
 Pillow==7.0.0
 pytz==2019.3
 soupsieve==2.0
