--- a/web_app/requirements.txt
+++ b/web_app/requirements.txt
@@ -1,15 +1,31 @@
 asgiref==3.2.3
 beautifulsoup4==4.8.2
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
 Click==7.0
 coverage==5.0.3
+cryptography==2.9
+defusedxml==0.6.0
 Django==3.0.3
+django-allauth==0.41.0
 dlib==19.19.0
 face-recognition==1.3.0
 face-recognition-models==0.3.0
+idna==2.9
 numpy==1.18.1
+oauthlib==3.1.0
 opencv-python==4.1.2.30
 Pillow==7.0.0
+pycparser==2.20
+PyJWT==1.7.1
+python3-openid==3.1.0
 pytz==2019.3
+requests==2.23.0
+requests-oauthlib==1.3.0
+six==1.14.0
+social-auth-app-django==3.1.0
+social-auth-core==3.3.3
 soupsieve==2.0
 sqlparse==0.3.0
-social-auth-app-django
+urllib3==1.25.8
