--- a/web_app/requirements.txt
+++ b/web_app/requirements.txt
@@ -9,6 +9,7 @@ cryptography==2.9
 defusedxml==0.6.0
 Django==3.0.3
 django-allauth==0.41.0
+djangorestframework==3.11.0
 dlib==19.19.0
 face-recognition==1.3.0
 face-recognition-models==0.3.0
@@ -29,5 +30,3 @@ social-auth-core==3.3.3
 soupsieve==2.0
 sqlparse==0.3.0
 urllib3==1.25.8
-social-auth-app-django
-djangorestframework
