--- a/web_app/requirements.txt
+++ b/web_app/requirements.txt
@@ -10,8 +10,8 @@ defusedxml==0.6.0
 Django==3.0.3
 django-allauth==0.41.0
 djangorestframework==3.11.0
-dlib==19.19.0
-face-recognition==1.3.0
+dlib
+face-recognition
 face-recognition-models==0.3.0
 idna==2.9
 numpy==1.18.1
